--- a/users-service/package.json
+++ b/users-service/package.json
@@ -29,12 +29,14 @@
     "@nestjs/mongoose": "^7.2.4",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.5.1",
+    "@types/nodemailer": "^6.4.15",
     "@types/passport": "^1.0.6",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "kafkajs": "^2.2.4",
     "mongoose": "^5.13.22",
+    "nodemailer": "^6.9.13",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
