--- a/products/package.json
+++ b/products/package.json
@@ -22,7 +22,11 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/microservices": "^10.3.8",
+    "@nestjs/mongoose": "^10.0.6",
     "@nestjs/platform-express": "^10.0.0",
+    "@typegoose/typegoose": "^12.4.0",
+    "mongoose": "^8.3.4",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
