--- a/Order_Micro/package.json
+++ b/Order_Micro/package.json
@@ -21,7 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.5.1",
+    "@nestjs/common": "^7.6.18",
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.18",
     "@nestjs/jwt": "^7.2.0",
@@ -29,7 +29,6 @@
     "@nestjs/mongoose": "^7.2.4",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.5.1",
-    "@types/nodemailer": "^6.4.15",
     "@types/passport": "^1.0.6",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.4.0",
@@ -50,9 +49,12 @@
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
+    "@types/next": "^9.0.0",
     "@types/node": "^14.14.6",
+    "@types/nodemailer": "^6.4.15",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
