--- a/users-service/package.json
+++ b/users-service/package.json
@@ -28,13 +28,14 @@
     "@nestjs/microservices": "^7.6.18",
     "@nestjs/mongoose": "^7.2.4",
     "@nestjs/passport": "^7.1.5",
-    "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/platform-express": "^7.6.18",
     "@types/passport": "^1.0.6",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "kafkajs": "^2.2.4",
     "mongoose": "^5.13.22",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
