--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ lerna-debug.log*
 *.sublime-workspace
 
 frontend/node_modules
-
+frontend/.next
 # IDE - VSCode
 .vscode/*
 !.vscode/settings.json
